Completed Personnel and Support Weapon tokens, Added Infantry Fire Table

--- a/ASLSK.Lib/ASLSK.Lib.csproj
+++ b/ASLSK.Lib/ASLSK.Lib.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="OneOf" Version="3.0.271" />
+    <PackageReference Include="SimpleHexes" Version="1.0.0" />
+    <PackageReference Include="WS.DomainModelling" Version="1.0.7" />
   </ItemGroup>
 
 </Project>
